# AKVFParam

./: .gitignore  CMakeLists.txt  README.md
results/: AKVF-results.txt
src/: AKVFParametrization.cpp  AKVFParametrization.h  Energy.h  FastLsBuildUtils.cpp  FastLsBuildUtils.h  GlobalLocalParametrization.cpp  GlobalLocalParametrization.h  LinesearchParametrizer.cpp  LinesearchParametrizer.h  LocalWeightedArapParametrizer.cpp  LocalWeightedArapParametrizer.h  ParametrizationAlgorithm.h  PardisoSolver.cpp  SymmetricDirichlet.cpp  SymmetricDirichlet.h  main.cpp
